<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/main" />
    <item
        android:id="@+id/menu_catalogue"
        android:icon="@drawable/ic_catalogue"
        android:title="@string/catalogue"/>
    <item
        android:id="@+id/menu_cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart"/>
    <item
        android:id="@+id/menu_promo"
        android:icon="@drawable/ic_promo"
        android:title="@string/promos"/>
    <item
        android:id="@+id/menu_account"
        android:icon="@drawable/ic_account"
        android:title="@string/profile"
        android:visible="true" />

</menu>